* Capacity to deal with splitted ZIM files
* Add mouse button forward/back support (ID: 3052213)
* Fix annoyous bug impacting user moving and reopening the same file (ID: 3052211)
* Remember the file picker path over sessions
* Does not read/save anymore the profile library if "live" instance (DVD or USB)
* Per default, use now the OS default language and not English anymore

Kiwix 0.9 alpha5
* kiwix-serve supports the inflate/deflate compression for text/html
* Fix bug in the search query tokenizer impact massively Malayalam

Kiwix 0.9 alpha4
* Fix a bug (regression) if no welcome page in the ZIM
* Introduce the kiwix-debug.bat for Windows
* Fix a UNICODE issue on Windows search engine
* kiwix-compact can now directly take xapian-directory path as argument

Kiwix 0.9 alpha3
* Fix major bug ID: 2991242, On Windows the search is accent sensitive

Kiwix 0.9 alpha2
* Fix critical bug ID: 2992289, ZIM file >2GB are not readable on 32b GNU/Linux

Kiwix 0.9 alpha1
* ZIM library management outside the profile
* Windows support & installer
* Fix the Hebrew search issue with the doublequote character (ID: 2939690)
* First version of the search suggest feature (ID: 2799913)
* New icon (with white background) (ID: 2981323)
* New ZIM HTTP server called "kiwix-serve"
* New Command line indexation tool called "kiwix-index"
* Allow drag&drop over the UI to open a ZIM file
* Autodection of the UI locale at the first start (GNU/Linux only)
* New "Recently open" menu
* New internal library of ZIM (to be able to manage many ZIM files)
* New Hebrew, Portuguese, Chinese and Persian localization
* New Bookmarks and Notes system (coming from Moulinwiki)
* New script to compact search engines indexes in the profile called "kiwix-compact.sh" (ID: 2834599)
* Translate ISO code in the language sub-menu (ID: 2834600)
* New "Save Page" (in files) feature (ID: 175508)
* New "Print as PDF" feature
* kiwix.sh check for current path (ID: 2850487)